SAK-21580 update indie master to 2.10-SNAPSHOT in trunk
git-svn-id: https://source.sakaiproject.org/svn/courier/trunk@102024 66ffb92e-73f9-0310-93c1-f5514f145a0a